# quadrupedrobot

./: CMakeLists.txt  Copyright  README  quadrobot.world  程序文档.html
Documentation/html/: .buildinfo  begin.html  cooper.html  docDevel.html  docUser.html  genindex.html  objects.inv  search.html  searchindex.js
Documentation/html/Portable/: item.html
Documentation/html/_sources/: a1.rst.txt  a_1.rst.txt  begin.rst.txt  cooper.rst.txt  docDevel.rst.txt  docUser.rst.txt
Documentation/html/classdescription/: class_LimbModel.html  class_LinkModel.html  class_QuadRobot.html  class_relation.html  relation.html
Documentation/html/filedescription/: filestructure.html
Documentation/html/mathdescription/: math.html
gazebo_model/Ekinox_INS/: ekinox_ins.dae  model.config  model.sdf
gazebo_model/Quadruped_Robot3/: model (原始外观).sdf  model.config
gazebo_model/Quadruped_Robot3/meshes/: Body.STL  L1.STL  L2.STL  L3.STL  xiaotui.STL
gnuplot_script/: graphanalysis_bound.gp  graphanalysis_loadthroughUnevenTerrain_trot.gp  graphanalysis_pdmpc_bound.gp  graphanalysis_pdmpc_trot.gp  graphanalysis_pronk.gp  graphanalysis_trot.gp  graphanalysis_walk.gp  graphanalysis_without_pdmpc_bound.gp  graphanalysis_without_pdmpc_trot.gp  graphanalysis_yaw_tracking_bound.gp  graphanalysis_yaw_tracking_trot.gp
include/: balanceController.hh  config.hh  gait.hh  gnuplot.hh  limbModel.hh  mpc.hh  quadrupedrobot.hh
include/ds/: traprocgen.hh  tree.h
include/gazebo/message/: contactsensors.pb.h  control.pb.h  jointsensors.pb.h  jointsposition.pb.h
include/gazebo/sensor/: sensor.hh
include/matlab/message/: matlabidentification.pb.h
proto/: contactsensors.proto  control.proto  jointsensors.proto  jointsposition.proto  matlabidentification.proto
source/: balanceController.cpp  gait.cpp  gnuplot.cpp  limbModel.cpp  main.cpp  mpc.cpp  quadrupedrobot.cpp
source/ds/: traprocgen.cpp
source/gazebo/message/: contactsensors.pb.cc  control.pb.cc  jointsensors.pb.cc  jointsposition.pb.cc
source/gazebo/qrINSmessage_plugin/: qrINSmessage.cpp  qrINSmessage.h
source/gazebo/qrmodel_plugin/: config.hh  qrmodelplugin.cpp  qrmodelplugin.h
source/gazebo/sensor/: sensor.cpp
test/: test_imu.cpp  test_imu.h
(+13 files in other folders)
